# rust-japanese

./: .editorconfig  Cargo.toml  LICENSE.txt  README.md  scripts.ps1
.github/workflows/: ci.yml
src/: charset.rs  converter.rs  lib.rs  vowel.rs
