[package]
name = "japanese"
version = "0.1.1"
authors = ["Mohammad Rahhal <m.r992@hotmail.com>"]
description = "Recognize the different Japanese scripts and convert between hiragana/katakana."
documentation = "https://docs.rs/japanese/latest/japanese/"
homepage = "https://github.com/mrahhal/rust-japanese"
repository = "https://github.com/mrahhal/rust-japanese"
readme = "README.md"
keywords = ["japanese", "script", "charset"]
license = "MIT"
edition = "2021"

[dependencies]
lazy_static = "1.4.0"
maplit = "1.0.2"

[dev-dependencies]
rstest = "0.15.0"
